# aartfaac2ms

./: .gitignore  CMakeLists.txt  CMakeVersionInfo.txt  README.md  aartfaac2ms.cpp  aartfaac2ms.h  aartfaacfile.h  aartfaacheader.h  aartfaacmode.h  aartfaacms.cpp  aartfaacms.h  afedit.cpp  antennaconfig.h  averagingwriter.cpp  averagingwriter.h  fitswriter.cpp  main.cpp  mswriter.cpp  mswriter.h  optional.h  progressbar.cpp  progressbar.h  timerange.h  version.h.in
aocommon/include/aocommon/: banddata.h  barrier.h  cloned_ptr.h  imagecoordinates.h  lane.h  matrix2x2.h  matrix4x4.h  parallelfor.h  polarization.h  staticfor.h  threadpool.h  uvector.h
scripts/docker/: Ubuntu20
units/: radeccoord.h
